data/derived/comb/progs/unify/prog1295.ml.out
Characters 42-55:
  let stringOfList f l = "["^sepConcat ";" [List.map(f l)]^"]";;
                                            ^^^^^^^^^^^^^
Error: This expression has type 'a list -> 'b list
       but an expression was expected of type string
